solucion de otros pustos

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -52,21 +52,21 @@
 @import 'parte3/sueldo/sueldo';
 @import 'parte3/telefonica/telefonica';
 @import 'parte3/viajes/viajes';
-@import 'parte4/banco/banco';
-@import 'parte4/becas/becas';
-@import 'parte4/bono-navideño/bono-navideño';
-@import 'parte4/bono-profesor/bono-profesor';
-@import 'parte4/bonos-tienda/bonos-tienda';
-@import 'parte4/bonos/bonos';
-@import 'parte4/calificacion/calificacion';
-@import 'parte4/dia-semana/dia-semana';
-@import 'parte4/pantalones/pantalones';
-@import 'parte4/paquete-diciembre/paquete-diciembre';
-@import 'parte4/polizas/polizas';
-@import 'parte4/sueldo-semanal/sueldo-semanal';
-@import 'parte4/tipo-vacuna/tipo-vacuna';
-@import 'parte4/vacaciones/vacaciones';
-@import 'parte4/viaje-estudios/viaje-estudios';
+@import 'parte4/3.10-vacaciones/vacaciones';
+@import 'parte4/3.11-bonos-tienda/bonos-tienda';
+@import 'parte4/3.12-sueldo-semanal/sueldo-semanal';
+@import 'parte4/3.13-viaje-estudios/viaje-estudios';
+@import 'parte4/3.14-calificacion/calificacion';
+@import 'parte4/3.15-dia-semana/dia-semana';
+@import 'parte4/3.16-bono-profesor/bono-profesor';
+@import 'parte4/3.17-paquete-diciembre/paquete-diciembre';
+@import 'parte4/3.18-bono-navideño/bono-navideño';
+@import 'parte4/3.19-tipo-vacuna/tipo-vacuna';
+@import 'parte4/3.20-pantalones/pantalones';
+@import 'parte4/3.21-banco/banco';
+@import 'parte4/3.7-becas/becas';
+@import 'parte4/3.8-bonos/bonos';
+@import 'parte4/3.9-polizas/polizas';
 @import 'promedio/promedio';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
